special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
.tabSwitcher {
    background: var(--ntp-controls-raised-backdrop);
    border-radius: 99px;
    box-shadow: 0px 1px 0px 0px  rgba(0, 0, 0, 0.05) inset;
    display: grid;
    gap: 2px;
    grid-template-columns: repeat(var(--tab-count), 1fr);
    overflow: hidden;
    padding: var(--sp-0_5);
    position: relative;
}

.tab {
    align-items: center;
    background: none;
    border: none;
    color: var(--ntp-text-normal);
    cursor: pointer;
    display: flex;
    gap: 6px;
    height: var(--sp-8);
    justify-content: center;
    padding: 0 var(--sp-3);
    position: relative;
    z-index: 1;

    &:hover:not([aria-selected="true"])::before {
        background: var(--ntp-controls-raised-backdrop);
        border-radius: 99px;
        content: '';
        inset: 0;
        position: absolute;
    }
}

.tabLabel {
    padding-top: 1px;
}

.blob {
    background-color: var(--color-white);
    border-radius: 18px;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.48);
    color: var(--ntp-controls-raised-fill-primary);
    height: var(--sp-8);
    left: 0;
    position: absolute;
    top: 2px;
    transition: translate 200ms ease;
    translate: calc(2px + var(--tab-index) * 100%);
    width: calc((100% - 4px) / var(--tab-count));
    will-change: translate;

    [data-theme="dark"] & {
        background-color: #6B6B6B;
        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 1px 2px rgba(0, 0, 0, 0.24), inset 0 1px 0 rgba(255, 255, 255, 0.06);
    }

    @media (prefers-reduced-motion: reduce) {
        transition: none;
    }
}

